# android-libtdjson

./: .gitignore  .travis.yml  LICENSE  README.md  build.gradle  build.sh  build_abi.sh  build_jni_lib.sh  build_lib.sh  build_td_abi.sh  prepare.sh  strip.sh
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  td_json_jni.cpp  tdjson.cpp
app/src/main/java/io/github/up9cloud/td/: JsonClient.java
app/src/main/java/org/drinkless/tdlib/: JsonClient.java
app/src/main/org/drinkless/tdlib/: JsonClient.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
